samples/_failures_safe/1761467850_d9b335_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e043667e.c: In function ‘main’:
./samples/SAFE/__tmp_e043667e.c:156:5: error: expected expression at end of input
  156 |     graph_add_edge(&g, 1, 3,
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_e043667e.c:156:5: error: expected declaration or statement at end of input
